--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ requires-python = ">=3.9"
 readme = "README.md"
 license = {text = "MIT"}
 
+[project.scripts]
+ice_breaking="airflow_dags.ib:ice_breaking"
+
 
 [tool.pdm]
 distribution = false
